fix: layout,svgs,buttons overflow issue

--- a/src/components/Home/FlowDiagram/FlowDiagram.css
+++ b/src/components/Home/FlowDiagram/FlowDiagram.css
@@ -1,87 +1,89 @@
-
-.flowDiagramDiv{
-    margin-left: 25%;
-    margin-top: 10%;
-    width: 40vw;
-    height:50vh;
-    padding: 1.2rem;
-    transform: 'translate(-50%, -50%)';
-    background: #3f7bdb;
-    border-radius: 2rem ;
+.flowDiagramDiv {
+  margin-left: 25%;
+  margin-top: 10%;
+  width: 40%;
+  height: 50vh;
+  padding: 1.2rem;
+  transform: "translate(-50%, -50%)";
+  background: #3f7bdb;
+  border-radius: 2rem;
 }
 
-.insideDiv{
-    width: 40vw;
-    height: 50vh;
-    border:solid;
-    border-width: .1rem;
-    border-color: white;
-    border-radius: 2rem;
+.insideDiv {
+  width: 40vw;
+  height: 50vh;
+  border: solid;
+  border-width: 0.1rem;
+  border-color: white;
+  border-radius: 2rem;
 }
 
- .overlay {
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: fixed;
-    background: rgba(49,49,49,0.8);
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  background: rgba(49, 49, 49, 0.8);
 }
 
-.joinLinks{
-    display: flex;
-    justify-content:space-evenly;
-    width: 28vw;
-    margin-top: 3vh;
-    margin-left: 6rem;;
-    color: white;
+.joinLinks {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 1em 0 1em;
+  color: white;
 }
-.iconsDone{
-    color:rgb(243, 250, 244, .3);
-    font-size: 4rem;
-    border:solid;
-    border-color: rgba(252, 245, 245, 0.08);
-    border-radius: 50%;
-    border-width: .4rem;
-}
-
-.hr{
-    width: 6vw;
-    height: .1vh;
-    margin-top:2rem;
+.iconsDone {
+  color: rgb(243, 250, 244, 0.3);
+  font-size: 4rem;
+  border: solid;
+  border-color: rgba(252, 245, 245, 0.08);
+  border-radius: 50%;
+  border-width: 0.4rem;
 }
 
-.vanish{ 
-    visibility: hidden;
+.hr {
+  width: 6vw;
+  height: 0.1vh;
+  margin-top: 2rem;
 }
 
-.gifDiv{
-    background: white;
-    width: 35vw;
-    height: 24vh;
-    margin: 5vh;
-    margin-top: 1rem;
+.vanish {
+  visibility: hidden;
 }
 
-.redirect{
-    background: #e4eaf7;
-    color: rgb(60, 94, 245);
-    text-decoration: none;
-    margin-left: 16rem;
-    padding: .5rem;
-    border-radius: 1rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    font-size: .9rem;
-    width: 6rem;
+.gifDiv {
+  margin: 0 1em 0 1em;
+  background: white;
+  height: 24vh;
 }
 
-.icons{
-    font-size: 4rem;
-    border:solid;
-    border-color: rgba(252, 245, 245, 0.08);
-    border-radius: 50%;
-    border-width: .4rem;
+.redirect {
+  background: #e4eaf7;
+  color: rgb(60, 94, 245);
+  text-decoration: none;
+  padding: 0.7rem;
+  border-radius: 1rem;
+  font-size: 0.9rem;
+}
+
+.icons {
+  font-size: 4rem;
+  border: solid;
+  border-color: rgba(252, 245, 245, 0.08);
+  border-radius: 50%;
+  border-width: 0.4rem;
+}
+.btn-redirects {
+  text-align: center;
+  padding: 2rem 0 0 0;
+  width: fit-content;
+}
+.links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
